--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/png" href="http://res.cloudinary.com/romeosis/image/upload/w_16,h_16,c_scale/oceanviewcoding_gil4nl.png" sizes="16x16"> 
-    <title>Ocean View Coding</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link rel="icon" type="image/png" href="/img/favicon.png" sizes="16x16"> 
+    <title>Birk & Blyme</title>
 </head>
 <body>
     <div class="container">
         <img 
-        id="logo" src="http://res.cloudinary.com/romeosis/image/upload/v1525770375/oceanviewcoding_gil4nl.png" alt="leni visual">
+        id="logo" src="/img/B&B-old-logo.jpg" alt="B&B">
+
+       
+        <h2 class="animated zoomInLeft ">New website is coming soon...</h2>
     </div>
     <script src="js/index.js"></script>
 </body>
