--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="icon" type="image/png" href="/img/favicon.png" sizes="16x16"> 
     <title>Birk & Blyme</title>
@@ -16,7 +16,7 @@
         id="logo" src="/img/B&B-old-logo.jpg" alt="B&B">
 
        
-        <h2 class="animated zoomInLeft ">New website is coming soon...</h2>
+        <h2 class=" message animated zoomInLeft ">New website is coming soon...</h2>
     </div>
     <script src="js/index.js"></script>
 </body>
