--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <img 
-        id="logo" src="/img/B&B-old-logo.jpg" alt="B&B">
+        id="logo" src="/img/B&B-logo.jpg" alt="B&B">
 
        
         <h2 class=" message animated zoomInLeft ">New website is coming soon...</h2>
