new pressroom catalog

--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
                </dl>
 
                
-    
+    <!-- https://issuu.com/birkblyme/docs/pressroom_catalogue_issuu -->
                <dl class="links">
                     <dt>Online catalogs:</dt>               
-                    <dt><a href= https://issuu.com/birkblyme/docs/pressroom_catalogue_issuu>
+                    <dt><a href="/pdf/BB_PRESSROOM_SUPPLIE_N_PARTS_LR2.pdf">
                         Pressroom supplies & parts 
                         </a>
+                        <a href="/pdf/BB_PRESSROOM_SUPPLIE_N_PARTS_LR2.pdf" class="download-icon">&nbsp;</a>
+
                     </dt>
                     <dt><a href= https://issuu.com/birkblyme/docs/complete_bindery_2012_catalogue_iss>
                         Bindery supplies & equipment
