download link attr

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <dt><a href="/pdf/BB_PRESSROOM_SUPPLIE_N_PARTS_LR2.pdf">
                         Pressroom supplies & parts 
                         </a>
-                        <a href="/pdf/BB_PRESSROOM_SUPPLIE_N_PARTS_LR2.pdf" class="download-icon">&nbsp;</a>
+                        <a href="/pdf/BB_PRESSROOM_SUPPLIE_N_PARTS_LR2.pdf" class="download-icon" download>&nbsp;</a>
 
                     </dt>
                     <dt><a href= https://issuu.com/birkblyme/docs/complete_bindery_2012_catalogue_iss>
