new pdf icons and no hover effect

--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
                     <dt><a href="/pdf/BB_PRESSROOM_SUPPLIE_N_PARTS_LR2.pdf">
                         Pressroom supplies & parts 
                         </a>
-                        <a href="/pdf/BB_PRESSROOM_SUPPLIE_N_PARTS_LR2.pdf" class="download-icon" download>&nbsp;</a>
+                        <a href="/pdf/BB_PRESSROOM_SUPPLIE_N_PARTS_LR2.pdf" class="download-icon" download>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
 
                     </dt>
-                    <dt><a href= https://issuu.com/birkblyme/docs/complete_bindery_2012_catalogue_iss>
+                    <dt><a href= "https://issuu.com/birkblyme/docs/complete_bindery_2012_catalogue_iss">
                         Bindery supplies & equipment
                         </a>
+                        <a href="https://www.dropbox.com/s/ok4ul1t4n1v6j0x/Complete%20Bindery%202012%20catalogue.compressed.pdf?dl=1" class="download-icon" download>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
                     </dt>
                     
                </dl>
